# rust-deb822

./: Cargo.toml  deny.toml  rustfmt.toml
.github/workflows/: rust.yml
src/: de.rs  error.rs  lib.rs  naive.rs  ser.rs
