[package]
name = "deb822"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#icu = "1.4.0"
icu_casemap = "1.4.0"
itertools = "0.12.0"
serde = "1.0.193"

[dev-dependencies]
serde = { version = "1.0.193", features = ["derive"] }
